edit board cards possible

--- a/add_task.html
+++ b/add_task.html
@@ -240,7 +240,7 @@
         </div>
         <div class="bottom-btns-container">
           <button
-            id="ad-clear-btn"
+            id="at-clear-btn"
             class="white-btn width-small hide-clear-btn"
             onclick="clearAll()">
             Clear
@@ -258,7 +258,7 @@
                 stroke-linejoin="round" />
             </svg>
           </button>
-          <button id="ad-add-btn" class="filled-btn" onclick="createTask('toDo')">
+          <button id="at-add-btn" class="filled-btn" onclick="createTask('toDo')">
             Create Task
             <img src="./assets/img/check.png" alt="" />
           </button>
