--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,7 @@
       </div>
       <div id="ec-menu-id" class="ec-menu-container d-none"></div>
       </div>
-      <div id="ad-overlay-id" class="ac-overlay d-none"></div>
+      <div id="at-overlay-id" class="ac-overlay d-none"></div>
       <div id="edit-overlay-id" class="ac-overlay d-none"></div>
       <div id="show-overlay-id" class="show-overlay d-none"></div>
       <div id="loader-id" class="loader d-none"></div>
