summary  tooltip  added

--- a/summary.html
+++ b/summary.html
@@ -87,6 +87,7 @@
 
               <div class="middle-hover-container" onclick="redirectToBoard()">
                 <div class="summary-row middle-section">
+                  <div id="expire-tooltip-id" class="expire-tooltip"></div>
                   <a class="middle-box">
                     <svg
                       width="40"
