--- a/add_task.html
+++ b/add_task.html
@@ -142,7 +142,7 @@
                 placeholder="Add new subtask"
                 autocomplete="off" />
               <div
-                id="subtast-add-button-id"
+                id="subtask-add-button-id"
                 class="cursor plus-btn"
                 onclick="toggleAddNewTaskMenu()">
                 <svg
