jsdoc for global .js

--- a/add_task.html
+++ b/add_task.html
@@ -273,7 +273,7 @@
       <div id="trans-bg-id" class="trans-bg d-none"></div>
       <div id="at-success-msg-id" class="success-msg-popup d-none">
         <span>Task added to board</span>
-        <img src="./assets/img/Board_Icons.png" alt="" />
+        <img src="./assets/svg/board.svg" alt="" />
       </div>
     </section>
     <div w3-include-html="./assets/templates/footer.html"></div>
