jsdoc for register.js and global templates.js

--- a/add_task.html
+++ b/add_task.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/add_task/add_task.css" />
     <link rel="stylesheet" href="./css/add_task/add_task_media.css" />
-    <script defer src="./js/includeHTML.js"></script>
     <script defer src="./js/add_task/add_task.js"></script>
     <script defer src="./js/register/register.js"></script>
-    <script defer src="./js/template.js"></script>
+    <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/global.js"></script>
     <title>Add Task</title>
   </head>
