--- a/board.html
+++ b/board.html
@@ -15,9 +15,8 @@
     <link rel="stylesheet" href="./css/add_task/add_task_media.css" />
     <link rel="stylesheet" href="./css/board/board_card_info.css" />
     <script defer src="./js/global.js"></script>
-    <script defer src="./js/includeHTML.js"></script>
     <script defer src="./js/board/board.js"></script>
-    <script defer src="./js/template.js"></script>
+    <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/board/board_assets.js"></script>
     <script defer src="./js/board/board_add_task_overlay.js"></script>
     <script defer src="./js/board/board_add_task.js"></script>
