--- a/error_page.html
+++ b/error_page.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/error_page/error_page.css" />
-    <script defer src="./js/includeHTML.js"></script>
     <script defer src="./js/register/register.js"></script>
-    <script defer src="./js/template.js"></script>
+    <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/global.js"></script>
     <title>Error</title>
   </head>
