--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/register/register_style.css" />
     <link rel="stylesheet" href="./css/register/register_media.css" />
     <script defer src="./js/register/register.js"></script>
-    <script defer src="./js/template.js"></script>
+    <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/legal_docs/legal_docs.js"></script>
     <script defer src="./js/global.js"></script>
     <title>Login</title>
