--- a/summary.html
+++ b/summary.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/summary/summary.css" />
     <link rel="stylesheet" href="./css/summary/summary_media.css" />
-    <script defer src="./js/includeHTML.js"></script>
     <script defer src="./js/global.js"></script>
     <script defer src="./js/summary/summary.js"></script>
     <script defer src="./js/register/register.js"></script>
-    <script defer src="./js/template.js"></script>
+    <script defer src="./js/global_templates.js"></script>
     <title>Summary</title>
   </head>
 
