--- a/contacts.html
+++ b/contacts.html
@@ -11,11 +11,10 @@
     <link rel="stylesheet" href="./css/contacts/contacts.css" />
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <script src="./js/includeHTML.js"></script>
     <script defer src="./js/contacts/contacts.js"></script>
     <script defer src="./js/contacts/contacts_helper.js"></script>
     <script defer src="./js/contacts/contact_assets.js"></script>
-    <script defer src="./js/template.js"></script>
+    <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/register/register.js"></script>
     <script defer src="./js/global.js"></script>
     
