--- a/board.html
+++ b/board.html
@@ -17,7 +17,7 @@
     <script defer src="./js/global.js"></script>
     <script defer src="./js/board/board.js"></script>
     <script defer src="./js/global_templates.js"></script>
-    <script defer src="./js/board/board_assets.js"></script>
+    <script defer src="./js/board/board_templates.js"></script>
     <script defer src="./js/board/board_add_task_overlay.js"></script>
     <script defer src="./js/board/board_add_task.js"></script>
     <title>Board</title>
