jsDoc for all contacts js data

--- a/board.html
+++ b/board.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="./css/board/board_card_info.css" />
     <script defer src="./js/global.js"></script>
     <script defer src="./js/board/board.js"></script>
+    <script defer src="./js/board/board_assets.js"></script>
+    <script defer src="./js/board/board_render.js"></script>
     <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/board/board_templates.js"></script>
     <script defer src="./js/board/board_add_task_overlay.js"></script>
