--- a/add_task.html
+++ b/add_task.html
@@ -99,7 +99,7 @@
                 id="rotate-arrow-id"
                 class="rotate-arrow"
                 src="./assets/svg/arrow_drop_down.svg"
-                onclick="openAssignedbyArrow()" />
+                onclick="openAssignedByArrow()" />
             </div>
             <div id="assigned-to-contacts-id" class="at-dropdown"></div>
             <div id="added-contacts-id" class="added-contacts"></div>
