--- a/board.html
+++ b/board.html
@@ -22,6 +22,7 @@
     <script defer src="./js/board/board_templates.js"></script>
     <script defer src="./js/board/board_add_task_overlay.js"></script>
     <script defer src="./js/board/board_add_task.js"></script>
+    <script defer src="./js/board/board_Add_task_assets.js"></script>
     <title>Board</title>
   </head>
   <body id="board-body-id" class="d-none" onload="includeHTML().then(() => initBoard())">
