--- a/legal_notice.html
+++ b/legal_notice.html
@@ -12,7 +12,7 @@
     <script defer src="./js/global.js"></script>
     <title>Legal Notice</title>
   </head>
-  <body id="legal-id" onload="legalsInit(event);">
+  <body id="legal-id" onload="legalsInit(event, 'legal');">
     <header id="header-id" class="header"></header>
     <section class="legal-style">
       <div class="legal-back-arrow" onclick="goBack()">
