--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -12,7 +12,7 @@
     <script defer src="./js/global.js"></script>
     <title>Privacy Policy</title>
   </head>
-  <body id="policy-id" onload="legalsInit(event);">
+  <body id="policy-id" onload="legalsInit(event, 'policy');">
     <header id="header-id" class="header"></header>
     <section class="policy-style">
       <div class="policy-notice-content">
