--- a/add_task.html
+++ b/add_task.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/add_task/add_task.css" />
     <link rel="stylesheet" href="./css/add_task/add_task_media.css" />
     <script defer src="./js/add_task/add_task.js"></script>
+    <script defer src="./js/add_task/add_task_assets.js"></script>
     <script defer src="./js/register/register.js"></script>
     <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/global.js"></script>
