register pw img toggling bug fixed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="remember-me-checkbox-container">
               <img
                 id="uncheckbox-id"
-                src="./assets/img/checkbox.svg"
+                src="./assets/svg/checkbox.svg"
                 alt="remember me checkbox"
                 onclick="toggleCheckbox(event)" />
               <span>Remember me</span>
