--- a/board.html
+++ b/board.html
@@ -18,6 +18,7 @@
     <script defer src="./js/board/board.js"></script>
     <script defer src="./js/board/board_assets.js"></script>
     <script defer src="./js/board/board_render.js"></script>
+    <script defer src="./js/board/board_eventListener.js"></script>
     <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/board/board_templates.js"></script>
     <script defer src="./js/board/board_add_task_overlay.js"></script>
