--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/register/register_style.css" />
     <link rel="stylesheet" href="./css/register/register_media.css" />
     <script defer src="./js/register/register.js"></script>
+    <script defer src="./js/register/login.js"></script>
     <script defer src="./js/register/register_templates.js"></script>
     <script defer src="./js/legal_docs/legal_docs.js"></script>
     <script defer src="./js/global.js"></script>
