--- a/contacts.html
+++ b/contacts.html
@@ -47,8 +47,8 @@
       </div>
       <div id="ec-menu-id" class="ec-menu-container d-none"></div>
       </div>
-      <div id="at-overlay-id" class="ac-overlay d-none"></div>
-      <div id="edit-overlay-id" class="ac-overlay d-none"></div>
+      <div id="at-overlay-id" class="ac-overlay d-none" onclick="closeAddNewContact()"></div>
+      <div id="edit-overlay-id" class="ac-overlay d-none" onclick="closeEditContact()"></div>
       <div id="show-overlay-id" class="show-overlay d-none"></div>
       <div id="loader-id" class="loader d-none"></div>
       <div id="contacts-success-msg-id" class="success-msg-popup d-none">
