--- a/help.html
+++ b/help.html
@@ -59,8 +59,7 @@
             is designed as an educational exercise and is not intended for extensive business usage.
             While we strive to ensure the best possible user experience, we cannot guarantee
             consistent availability, reliability, accuracy, or other aspects of quality regarding
-            <span>Join</span>
-            .
+            <span>Join</span>.
           </p>
         </div>
         <div class="help-howtoUse">
@@ -129,7 +128,6 @@
         </div>
         <div class="help-enjoy">
           <h2>Enjoy using Join!</h2>
-
         </div>
       </div>
     </section>
