added  new  file  to store search logic

--- a/board.html
+++ b/board.html
@@ -17,6 +17,7 @@
     <script defer src="./js/global.js"></script>
     <script defer src="./js/board/board.js"></script>
     <script defer src="./js/board/board_assets.js"></script>
+    <script defer src="./js/board/board_search_logic.js"></script>
     <script defer src="./js/board/board_render.js"></script>
     <script defer src="./js/board/board_eventListener.js"></script>
     <script defer src="./js/global_templates.js"></script>
