added update functionallity for contacts

--- a/contacts.html
+++ b/contacts.html
@@ -17,6 +17,7 @@
     <script defer src="./js/global_templates.js"></script>
     <script defer src="./js/register/register.js"></script>
     <script defer src="./js/global.js"></script> 
+    <script defer src="./js/api.js"></script> 
   </head>
   <body id="contacts-body-id" onload="includeHTML().then(() => contactsInit())">
     <div w3-include-html="./assets/templates/header.html"></div>
