possible to send tasks to backend

--- a/board.html
+++ b/board.html
@@ -25,6 +25,7 @@
     <script defer src="./js/board/board_add_task_overlay.js"></script>
     <script defer src="./js/board/board_add_task.js"></script>
     <script defer src="./js/board/board_add_task_assets.js"></script>
+    <script defer src="./js/api.js"></script>
     <title>Board</title>
   </head>
   <body id="board-body-id" class="d-none" onload="includeHTML().then(() => initBoard())">
